Dropdown help alignment fix & date field onchange fix

--- a/Outreach GDS Toolkit/Static/OutreachGDS.css
+++ b/Outreach GDS Toolkit/Static/OutreachGDS.css
@@ -982,7 +982,7 @@ legend .aj_formmessage {
 }
 
 .details {
-	display:inline-block
+	display:block
 }
 
 .details > span {
